# FilediskServer

./: README.md
.github/workflows/: claude-ai.yml
httppart/: ApiServer.cc  CMakeLists.txt  FileManager.pb.cc  FileManager.pb.h  FileManager.proto  FileManager.srpc.h  UserSign.pb.cc  UserSign.pb.h  UserSign.proto  UserSign.srpc.h  Utilty.cc  _userless_client.pb_skeleton.cc  a  client.pb_skeleton.cc  d  demo.cc  dirinfoserver.cc  use_rpcserver.cc
logger/: Logger.cc
tcppart/: CMakeLists.txt  CusInfo.h  EventLoop.cc  EventLoop.h  FileServer.cc  FileServer.h  TaskQueue.cc  TcpConnection.cc  TcpConnection.h  TcpServer.cc
